--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=Core basic lib for ESP32/ESP8266
 category=Other
 url=https://github.com/JulioCRO/ESPbasic
 architectures=*
-depends=ESPAsyncWebSrv, ArduinoJson
+depends=ESPAsyncWebSrv, ArduinoJson, AsyncTCP
